<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_userName"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/cgt_et_regist_room_username"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hint_regist_room_username"
            android:textCursorDrawable="@null" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_pwd"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/cgt_et_regist_room_pwd"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/text_hint_login_pwd"
            android:inputType="textPassword"
            android:textCursorDrawable="@null" />
    </LinearLayout>
    <Button
        android:id="@+id/cgt_btn_regist_room"
        style="@style/cgt_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:text="@string/text_regist_room_btn" />
</LinearLayout>