<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dip">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_room_id"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cgt_et_regist_room_id"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_room_address"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cgt_et_regist_room_address"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
 	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_room_username"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cgt_et_regist_room_username"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_room_pwd"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cgt_et_regist_room_pwd"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_regist_room_creator"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cgt_et_regist_room_creator"
            style="@style/cgt_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--<Button-->
        <!--android:id="@+id/cgt_btn_modify_room"-->
        <!--style="@style/cgt_btn"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="20dip"-->
        <!--android:text="@string/text_modify_room_btn" />-->
</LinearLayout>